Adecuando serviciosWeb externos

--- a/SwExternos/ServiciosExternos/appsettings.json
+++ b/SwExternos/ServiciosExternos/appsettings.json
@@ -5,5 +5,5 @@
       "Default": "Warning"
     }
   },
-  "HostServicioSeguridad": "http://localhost:53317"
+  "HostServicioSeguridad": "http://localhost/SwSeguridad"
 }
